[project]
name = "investigation-contracts"
version = "0.2.0"
description = "Shared bigraph-schema types for the Actionable Investigation Graph (RFC-0002)."
requires-python = ">=3.11"
dependencies = ["bigraph-schema", "pydantic>=2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["investigation_contracts"]
